update cargo metadata

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "vl53l4cd"
+description = "VL53L4CD ToF ranging sensor support for Linux"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+repository = "https://github.com/akeamc/vl53l4cd"
 
 [dependencies]
 i2cdev = "0.5.1"
