Squashed commit of the following:
commit 98128649d621282acd14d3085019309485c5cdf7
Author: akeamc <ake@amcoff.net>
Date:   Sun Jul 24 14:06:00 2022 +0200

    async!

commit c863a3f4467369c606c2ec7fa55fe9bff033a661
Author: akeamc <ake@amcoff.net>
Date:   Sun Jul 24 13:25:54 2022 +0200

    improve ergonomics

commit 5c9101689b6423f01d36f0a7b620e7032bb30d10
Author: akeamc <ake@amcoff.net>
Date:   Sun Jul 24 12:33:01 2022 +0200

    async

commit 1048d83d6515a38a7c61c726a65d00f481df1922
Author: akeamc <ake@amcoff.net>
Date:   Sun Jul 24 12:22:01 2022 +0200

    test?

commit 04cc3dbee46bb0001764f79125a4742884bdd475
Author: akeamc <ake@amcoff.net>
Date:   Sun Jul 24 12:20:41 2022 +0200

    inlines

commit 3c67c9f1c35e667bff699ad247c1856144a74180
Author: akeamc <ake@amcoff.net>
Date:   Sun Jul 24 11:52:22 2022 +0200

    remove some sleep

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,15 @@
 [package]
 name = "vl53l4cd"
-description = "VL53L4CD ToF ranging sensor support for Linux"
-version = "0.1.0"
+description = "VL53L4CD ToF ranging sensor driver"
+version = "0.2.0"
 edition = "2021"
 license = "MIT"
 repository = "https://github.com/akeamc/vl53l4cd"
 
 [dependencies]
 i2cdev = "0.5.1"
+tokio = { version = "1.20.0", features = ["time"] }
 tracing = { version = "0.1.35", optional = true }
+
+[dev-dependencies]
+tokio-test = "0.4.2"
